--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,23 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "Food_Project/wsgi.py",
-      "use": "@vercel/python"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/Food_Project/wsgi.py"
-    }
-  ]
+    "version": 2,
+    "builds": [
+      {
+        "src": "Food_Project/wsgi.py",
+        "use": "@vercel/python"
+      },
+      {
+        "src": "staticfiles/",
+        "use": "@vercel/static"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/static/(.*)",
+        "dest": "/static/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "Food_Project/wsgi.py"
+      }
+    ]
 }
